ugh, working through broken ui issues

--- a/basic_bedrock_build/src/scss/app.scss
+++ b/basic_bedrock_build/src/scss/app.scss
@@ -1,4 +1,5 @@
 // Import base stylesheets
+@import "~concretecms-bedrock/assets/bedrock/scss/frontend";
 
 // FRONT END
 // @import "~concretecms-bedrock/assets/account/scss/frontend";
@@ -22,7 +23,6 @@
 // @import "~concretecms-bedrock/assets/taxonomy/scss/frontend";
 // @import "~concretecms-bedrock/assets/testimonials/scss/frontend";
 // @import "~concretecms-bedrock/assets/video/scss/frontend";
-// @import "~concretecms-bedrock/assets/video/scss/frontend";
 
 
 // OTHER
@@ -34,3 +34,10 @@
 // div.ccm-page {
 //   //Add everthing else in here
 // }
+
+// FIX terrible temp solution for layout UI being off screen when including Bootstrap5
+#ccm-inline-toolbar-container {
+    #ccm-layouts-toolbar {
+        left: inherit !important;
+    }
+}
